updates css and html

--- a/index.html
+++ b/index.html
@@ -8,20 +8,47 @@
   </head>
   <body>
     <header>
-    <h1>How long do animals sleep?</h1>
+    <h1>How many hours a day do animals sleep?</h1>
   </header>
     <div id="wrapper">
-      <div class="giraffe">
+
+      <div  class="thumb  ">
+        <div id="giraffe" class="inner"></div>
       </div>
-      <div class="cow" id="thumb"></div>
-      <div class="human" id="thumb"></div>
-      <div class="chipanzee" id="thumb"></div>
-      <div class="rabbit" id="thumb"></div>
-      <div class="dog" id="thumb"></div>
-      <div class="cat" id="thumb"></div>
-      <div class="tiger" id="thumb"></div>
-      <div class="koala" id="thumb"></div>
+
+      <div  class="thumb">
+        <div id="cow" class="inner"></div>
+      </div>
+
+      <div  class="thumb">
+        <div id="human" class="inner"></div>
+      </div>
+
+      <div  class="thumb">
+        <div id="chipanzee" class="inner"></div>
+      </div>
+
+      <div class="thumb">
+        <div id="rabbit" class="inner"></div>
+      </div>
+
+      <div  class="thumb">
+        <div id="dog" class="inner"></div>
+      </div>
+
+      <div class="thumb">
+        <div id="cat" class="inner"></div>
+      </div>
+
+      <div  class="thumb">
+        <div id="tiger" class="inner"></div>
+      </div>
+
+      <div class="thumb">
+        <div id="koala" class="inner"></div>
+      </div>
     </div>
+
     <footer>
       <p>
         Made by Lucila Vilela
