--- a/index.html
+++ b/index.html
@@ -12,39 +12,39 @@
   </header>
     <div id="wrapper">
 
-      <div  class="thumb  ">
+      <div  class="thumb" data-color="#ff9966">
         <div id="giraffe" class="inner"></div>
       </div>
 
-      <div  class="thumb">
+      <div  class="thumb" data-color="#19aad1">
         <div id="cow" class="inner"></div>
       </div>
 
-      <div  class="thumb">
+      <div  class="thumb" data-color="#edb5bd">
         <div id="human" class="inner"></div>
       </div>
 
-      <div  class="thumb">
+      <div  class="thumb" data-color="#c39d63">
         <div id="chipanzee" class="inner"></div>
       </div>
 
-      <div class="thumb">
+      <div class="thumb" data-color="#b6cac0">
         <div id="rabbit" class="inner"></div>
       </div>
 
-      <div  class="thumb">
+      <div  class="thumb" data-color="#fefa99">
         <div id="dog" class="inner"></div>
       </div>
 
-      <div class="thumb">
-        <div id="cat" class="inner"></div>
+      <div class="thumb" data-color="#ebc1d2">
+        <div id="cat" class="inner" color="green"></div>
       </div>
 
-      <div  class="thumb">
+      <div  class="thumb" data-color="#dfae43">
         <div id="tiger" class="inner"></div>
       </div>
 
-      <div class="thumb">
+      <div class="thumb" data-color="#7d8e74">
         <div id="koala" class="inner"></div>
       </div>
     </div>
@@ -54,6 +54,7 @@
         Made by Lucila Vilela
       </p>
     </footer>
-      <script type="text/javascript" src='js/main.js'>  </script>
+
+    <script type="text/javascript" src='js/main.js'>  </script>
   </body>
 </html>
