--- a/index.html
+++ b/index.html
@@ -12,49 +12,119 @@
   </header>
     <div id="wrapper">
 
-      <div  class="thumb" data-color="#ff9966">
+      <div  class="thumb" data-color="#ff9960">
         <div id="giraffe" class="inner"></div>
+        <div class="textbox">
+          <h3>2 hours</h3>
+          <p>Giraffes in the wild sleep up to 2 hours a day. Being large and slow, they're constantly on guard against predators. Giraffes can go weeks without napping</p>
+        </div>
       </div>
 
       <div  class="thumb" data-color="#19aad1">
         <div id="cow" class="inner"></div>
+          <div class="textbox">
+            <h3>3.9 hours</h3>
+            <p>Cows usually don't sleep 3.9 hours straight, instead sleeping for shorter periods of time. cows can sleep standing up, but they don't experience full REM sleep (Rapid Eye Movement deep slumber is what allows us to dream) unless they lie down.</p>
+          </div>
       </div>
 
       <div  class="thumb" data-color="#edb5bd">
         <div id="human" class="inner"></div>
+          <div class="textbox">
+            <h3>6 hours</h3>
+            <p>Humans sleep horizontally. While adult humans need 6 to 8 hours of sleep to stay healthy, babies sleep up to 19 hours a day.</p>
+          </div>
       </div>
 
       <div  class="thumb" data-color="#c39d63">
         <div id="chipanzee" class="inner"></div>
+        <div class="textbox">
+          <h3>9.5 hours</h3>
+          <p>Humans sleep horizontally. While adult humans need 6 to 8 hours of sleep to stay healthy, babies sleep up to 19 hours a day.</p>
+        </div>
       </div>
 
       <div class="thumb" data-color="#b6cac0">
         <div id="rabbit" class="inner"></div>
+        <div class="textbox">
+          <h3>11.4 hours</h3>
+          <p>Rabbits are crepuscular, so they're most active during sunset and sunrise. They sleep during the day, with their ears folded on their heads.
+          </p>
+        </div>
       </div>
 
       <div  class="thumb" data-color="#fefa99">
         <div id="dog" class="inner"></div>
+        <div class="textbox">
+          <h3>12 hours</h3>
+          <p>Some dogs sleep curling up in a ball, others love sleeping in their owner's bed. Dogs may twitch and even growl during sleep, un indication that dogs can dream.
+          </p>
+        </div>
       </div>
 
       <div class="thumb" data-color="#ebc1d2">
-        <div id="cat" class="inner" color="green"></div>
+        <div id="cat" class="inner"></div>
+        <div class="textbox">
+          <h3>13 hours</h3>
+          <p> Sleeping is one of the cat's favorites activities and may spend  about two thirds of their life sleeping. Cats mostly sleeping during the day, saving their energy to make it easier for her to spring into action at the first sign of play or prey.
+          </p>
+        </div>
       </div>
 
       <div  class="thumb" data-color="#dfae43">
         <div id="tiger" class="inner"></div>
+        <div class="textbox">
+          <h3>15.8 hours</h3>
+          <p>
+            Top-of-the-food-chain animals like tigers, which have little fear of predators and often consume huge meals at one sitting, can afford to spend much of their day sleeping
+          </p>
+        </div>
       </div>
 
       <div class="thumb" data-color="#7d8e74">
         <div id="koala" class="inner"></div>
+        <div class="textbox">
+          <h3>20 hours</h3>
+          <p>
+            Koala bears sleep during the day and nap at night. When not asleep, koalas eat eucalyptus leaves.
+          </p>
+        </div>
       </div>
     </div>
 
-    <footer>
-      <p>
-        Made by Lucila Vilela
-      </p>
-    </footer>
+    <link href="css/progressbar.css" rel="stylesheet" media="screen" title="no title">
+    <script src="js/progressbar.js" charset="utf-8"></script>
+    <script type="text/javascript">
 
+        var bar1 = new CircleProgressBar(document.querySelector('#giraffe'));
+        bar1.setProgressOfTotal(2, 24);
+
+        var bar2 = new CircleProgressBar(document.querySelector('#cow'));
+        bar2.setProgressOfTotal(4, 24);
+
+        var bar3 = new CircleProgressBar(document.querySelector('#human'));
+        bar3.setProgressOfTotal(6, 24);
+
+        var bar4 = new CircleProgressBar(document.querySelector('#chipanzee'));
+        bar4.setProgressOfTotal(9, 24);
+
+        var bar5 = new CircleProgressBar(document.querySelector('#rabbit'));
+        bar5.setProgressOfTotal(11, 24);
+
+        var bar6 = new CircleProgressBar(document.querySelector('#dog'));
+        bar6.setProgressOfTotal(12, 24);
+
+        var bar7 = new CircleProgressBar(document.querySelector('#cat'));
+        bar7.setProgressOfTotal(13, 24);
+
+        var bar8 = new CircleProgressBar(document.querySelector('#tiger'));
+        bar8.setProgressOfTotal(15, 24);
+
+        var bar9 = new CircleProgressBar(document.querySelector('#koala'));
+        bar9.setProgressOfTotal(20, 24);
+
+    </script>
     <script type="text/javascript" src='js/main.js'>  </script>
+
   </body>
 </html>
