--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="css/master.css" media="screen" title="no title">
-    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <title>Sleeping Animals</title>
   </head>
   <body>
@@ -12,7 +12,7 @@
   </header>
     <div id="wrapper">
 
-      <div  class="thumb" data-color="#ff9960">
+      <div  class="thumb" data-color="#FF934F">
         <div id="giraffe" class="inner"></div>
         <div class="textbox">
           <h3>2 hours</h3>
@@ -20,7 +20,7 @@
         </div>
       </div>
 
-      <div  class="thumb" data-color="#19aad1">
+      <div  class="thumb" data-color="#E88648">
         <div id="cow" class="inner"></div>
           <div class="textbox">
             <h3>3.9 hours</h3>
@@ -28,7 +28,7 @@
           </div>
       </div>
 
-      <div  class="thumb" data-color="#edb5bd">
+      <div  class="thumb" data-color="#D17941">
         <div id="human" class="inner"></div>
           <div class="textbox">
             <h3>6 hours</h3>
@@ -36,7 +36,7 @@
           </div>
       </div>
 
-      <div  class="thumb" data-color="#c39d63">
+      <div  class="thumb" data-color="#BA6B3A">
         <div id="chipanzee" class="inner"></div>
         <div class="textbox">
           <h3>9.5 hours</h3>
@@ -44,7 +44,7 @@
         </div>
       </div>
 
-      <div class="thumb" data-color="#b6cac0">
+      <div class="thumb" data-color="#A35E33">
         <div id="rabbit" class="inner"></div>
         <div class="textbox">
           <h3>11.4 hours</h3>
@@ -53,7 +53,7 @@
         </div>
       </div>
 
-      <div  class="thumb" data-color="#fefa99">
+      <div  class="thumb" data-color="#8C512C">
         <div id="dog" class="inner"></div>
         <div class="textbox">
           <h3>12 hours</h3>
@@ -62,7 +62,7 @@
         </div>
       </div>
 
-      <div class="thumb" data-color="#ebc1d2">
+      <div class="thumb" data-color="#744324">
         <div id="cat" class="inner"></div>
         <div class="textbox">
           <h3>13 hours</h3>
@@ -71,7 +71,7 @@
         </div>
       </div>
 
-      <div  class="thumb" data-color="#dfae43">
+      <div  class="thumb" data-color="#5D361D">
         <div id="tiger" class="inner"></div>
         <div class="textbox">
           <h3>15.8 hours</h3>
@@ -81,7 +81,7 @@
         </div>
       </div>
 
-      <div class="thumb" data-color="#7d8e74">
+      <div class="thumb" data-color="#462916">
         <div id="koala" class="inner"></div>
         <div class="textbox">
           <h3>20 hours</h3>
