--- a/index.html
+++ b/index.html
@@ -2,97 +2,137 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="css/master.css" media="screen" title="no title">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css" media="screen" title="no title">
     <title>Sleeping Animals</title>
   </head>
   <body>
-    <header>
-    <h1>How many hours a day do animals sleep?</h1>
-  </header>
+
+
     <div id="wrapper">
-
-      <div  class="thumb" data-color="#FF934F">
-        <div id="giraffe" class="inner"></div>
-        <div class="textbox">
-          <h3>2 hours</h3>
-          <p>Giraffes in the wild sleep up to 2 hours a day. Being large and slow, they're constantly on guard against predators. Giraffes can go weeks without napping</p>
-        </div>
+      <div id="close">
+        <img src="images/close.png" alt="" />
       </div>
 
-      <div  class="thumb" data-color="#E88648">
-        <div id="cow" class="inner"></div>
-          <div class="textbox">
-            <h3>3.9 hours</h3>
-            <p>Cows usually don't sleep 3.9 hours straight, instead sleeping for shorter periods of time. cows can sleep standing up, but they don't experience full REM sleep (Rapid Eye Movement deep slumber is what allows us to dream) unless they lie down.</p>
+      <div class="row">
+        <div class="thumb" id="giraffe" data-color="#FF934F">
+          <div class="scrim">
+            <div class="textbox">
+              <h3>2 hours</h3>
+              <p>Giraffes in the wild sleep up to 2 hours a day. Being large and slow, they're constantly on guard against predators. Giraffes can go weeks without napping</p>
+            </div>
           </div>
-      </div>
+        </div>
 
-      <div  class="thumb" data-color="#D17941">
-        <div id="human" class="inner"></div>
-          <div class="textbox">
-            <h3>6 hours</h3>
-            <p>Humans sleep horizontally. While adult humans need 6 to 8 hours of sleep to stay healthy, babies sleep up to 19 hours a day.</p>
+        <div class="thumb" id="cow" data-color="#E88648">
+          <div class="scrim">
+            <div class="textbox">
+              <h3>3.9 hours</h3>
+              <p>Cows usually don't sleep 3.9 hours straight, instead sleeping for shorter periods of time. cows can sleep standing up, but they don't experience full REM sleep (Rapid Eye Movement deep slumber is what allows us to dream) unless they lie down.</p>
+            </div>
           </div>
-      </div>
+        </div>
 
-      <div  class="thumb" data-color="#BA6B3A">
-        <div id="chipanzee" class="inner"></div>
-        <div class="textbox">
-          <h3>9.5 hours</h3>
-          <p>Humans sleep horizontally. While adult humans need 6 to 8 hours of sleep to stay healthy, babies sleep up to 19 hours a day.</p>
+        <div class="thumb" id="human" data-color="#D17941">
+          <div class="scrim">
+              <div class="textbox">
+                <h3>6 hours</h3>
+                <p>Humans sleep horizontally. While adult humans need 6 to 8 hours of sleep to stay healthy, babies sleep up to 19 hours a day.</p>
+              </div>
+            </div>
         </div>
       </div>
 
-      <div class="thumb" data-color="#A35E33">
-        <div id="rabbit" class="inner"></div>
-        <div class="textbox">
-          <h3>11.4 hours</h3>
-          <p>Rabbits are crepuscular, so they're most active during sunset and sunrise. They sleep during the day, with their ears folded on their heads.
-          </p>
+
+      <div id="right">
+        <img src="images/arrow_right.png" alt="" />
+      </div>
+      <div id="left">
+        <img src="images/arrow_left.png" alt="" />
+      </div>
+
+      <div class="row">
+        <div class="thumb" id="chipanzee" data-color="#BA6B3A">
+          <div class="scrim">
+            <div class="textbox">
+              <h3>9.5 hours</h3>
+              <p>Humans sleep horizontally. While adult humans need 6 to 8 hours of sleep to stay healthy, babies sleep up to 19 hours a day.</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="thumb" id="rabbit" data-color="#A35E33">
+          <div class="scrim">
+            <div class="textbox">
+              <h3>11.4 hours</h3>
+              <p>Rabbits are crepuscular, so they're most active during sunset and sunrise. They sleep during the day, with their ears folded on their heads.
+              </p>
+            </div>
+        </div>
+        </div>
+
+        <div class="thumb" id="dog" data-color="#8C512C">
+          <div class="scrim">
+            <div class="textbox">
+              <h3>12 hours</h3>
+              <p>Some dogs sleep curling up in a ball, others love sleeping in their owner's bed. Dogs may twitch and even growl during sleep, un indication that dogs can dream.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
 
-      <div  class="thumb" data-color="#8C512C">
-        <div id="dog" class="inner"></div>
-        <div class="textbox">
-          <h3>12 hours</h3>
-          <p>Some dogs sleep curling up in a ball, others love sleeping in their owner's bed. Dogs may twitch and even growl during sleep, un indication that dogs can dream.
-          </p>
+      <div class="row">
+        <div class="thumb" id="cat" data-color="#744324">
+          <div class = "scrim">
+            <div class="textbox">
+              <h3>13 hours</h3>
+              <p> Sleeping is one of the cat's favorites activities and may spend  about two thirds of their life sleeping. Cats mostly sleeping during the day, saving their energy to make it easier for her to spring into action at the first sign of play or prey.
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div class="thumb" data-color="#744324">
-        <div id="cat" class="inner"></div>
-        <div class="textbox">
-          <h3>13 hours</h3>
-          <p> Sleeping is one of the cat's favorites activities and may spend  about two thirds of their life sleeping. Cats mostly sleeping during the day, saving their energy to make it easier for her to spring into action at the first sign of play or prey.
-          </p>
+        <div class="thumb" id="tiger" data-color="#5D361D">
+          <div class = "scrim">
+            <div class="textbox">
+              <h3>15.8 hours</h3>
+              <p>
+                Top-of-the-food-chain animals like tigers, which have little fear of predators and often consume huge meals at one sitting, can afford to spend much of their day sleeping
+              </p>
+            </div>
+          </div>
         </div>
-      </div>
 
-      <div  class="thumb" data-color="#5D361D">
-        <div id="tiger" class="inner"></div>
-        <div class="textbox">
-          <h3>15.8 hours</h3>
-          <p>
-            Top-of-the-food-chain animals like tigers, which have little fear of predators and often consume huge meals at one sitting, can afford to spend much of their day sleeping
-          </p>
-        </div>
-      </div>
-
-      <div class="thumb" data-color="#462916">
-        <div id="koala" class="inner"></div>
-        <div class="textbox">
-          <h3>20 hours</h3>
-          <p>
-            Koala bears sleep during the day and nap at night. When not asleep, koalas eat eucalyptus leaves.
-          </p>
+        <div class="thumb" id="koala" data-color="#462916">
+          <div class="scrim">
+            <div class="textbox">
+              <h3>20 hours</h3>
+              <p>
+                Koala bears sleep during the day and nap at night. When not asleep, koalas eat eucalyptus leaves.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
 
-    <link href="css/progressbar.css" rel="stylesheet" media="screen" title="no title">
+    <footer>
+      <h2>Sleeping Animals</h3>
+      <p>
+        By Lucila Vilela
+      </p>
+    </footer>
+
+    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
+    <script type="text/javascript" src='js/main.js'></script>
+
+
+  </body>
+</html>
+
+
+    <!-- <link href="css/progressbar.css" rel="stylesheet" media="screen" title="no title">
     <script src="js/progressbar.js" charset="utf-8"></script>
     <script type="text/javascript">
 
@@ -124,7 +164,3 @@
         bar9.setProgressOfTotal(20, 24);
 
     </script>
-    <script type="text/javascript" src='js/main.js'>  </script>
-
-  </body>
-</html>
