--- a/index.html
+++ b/index.html
@@ -8,11 +8,17 @@
   </head>
   <body>
 
+    <div class="control" id="close">
+      <img src="images/close.png" alt="" />
+    </div>
+    <div class="control" id="right">
+      <img src="images/arrow_right.png" alt="" />
+    </div>
+    <div class="control" id="left">
+      <img src="images/arrow_left.png" alt="" />
+    </div>
 
     <div id="wrapper">
-      <div id="close">
-        <img src="images/close.png" alt="" />
-      </div>
 
       <div class="row">
         <div class="thumb" id="giraffe" data-color="#FF934F">
@@ -43,14 +49,6 @@
         </div>
       </div>
 
-
-      <div id="right">
-        <img src="images/arrow_right.png" alt="" />
-      </div>
-      <div id="left">
-        <img src="images/arrow_left.png" alt="" />
-      </div>
-
       <div class="row">
         <div class="thumb" id="chipanzee" data-color="#BA6B3A">
           <div class="scrim">
@@ -65,8 +63,7 @@
           <div class="scrim">
             <div class="textbox">
               <h3>11.4 hours</h3>
-              <p>Rabbits are crepuscular, so they're most active during sunset and sunrise. They sleep during the day, with their ears folded on their heads.
-              </p>
+              <p>Rabbits are crepuscular, so they're most active during sunset and sunrise. They sleep during the day, with their ears folded on their heads.</p>
             </div>
         </div>
         </div>
@@ -75,8 +72,7 @@
           <div class="scrim">
             <div class="textbox">
               <h3>12 hours</h3>
-              <p>Some dogs sleep curling up in a ball, others love sleeping in their owner's bed. Dogs may twitch and even growl during sleep, un indication that dogs can dream.
-              </p>
+              <p>Some dogs sleep curling up in a ball, others love sleeping in their owner's bed. Dogs may twitch and even growl during sleep, un indication that dogs can dream.</p>
             </div>
           </div>
         </div>
@@ -87,8 +83,7 @@
           <div class = "scrim">
             <div class="textbox">
               <h3>13 hours</h3>
-              <p> Sleeping is one of the cat's favorites activities and may spend  about two thirds of their life sleeping. Cats mostly sleeping during the day, saving their energy to make it easier for her to spring into action at the first sign of play or prey.
-              </p>
+              <p>Sleeping is one of the cat's favorites activities and may spend  about two thirds of their life sleeping. Cats mostly sleeping during the day, saving their energy to make it easier for her to spring into action at the first sign of play or prey.</p>
             </div>
           </div>
         </div>
@@ -97,9 +92,7 @@
           <div class = "scrim">
             <div class="textbox">
               <h3>15.8 hours</h3>
-              <p>
-                Top-of-the-food-chain animals like tigers, which have little fear of predators and often consume huge meals at one sitting, can afford to spend much of their day sleeping
-              </p>
+              <p>Top-of-the-food-chain animals like tigers, which have little fear of predators and often consume huge meals at one sitting, can afford to spend much of their day sleeping</p>
             </div>
           </div>
         </div>
@@ -108,9 +101,7 @@
           <div class="scrim">
             <div class="textbox">
               <h3>20 hours</h3>
-              <p>
-                Koala bears sleep during the day and nap at night. When not asleep, koalas eat eucalyptus leaves.
-              </p>
+              <p>Koala bears sleep during the day and nap at night. When not asleep, koalas eat eucalyptus leaves.</p>
             </div>
           </div>
         </div>
@@ -119,14 +110,11 @@
 
     <footer>
       <h2>Sleeping Animals</h3>
-      <p>
-        By Lucila Vilela
-      </p>
+      <p>By Lucila Vilela</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src='js/main.js'></script>
-
 
   </body>
 </html>
