--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <div id="wrapper">
 
-      <div class="row1">
-        <div class="thumb row1" id="giraffe" data-color="#FF934F">
+      <div class="row">
+        <div class="thumb" id="giraffe" data-color="#FF934F">
           <div class="scrim">
             <div class="textbox">
               <h3>2 hours</h3>
@@ -30,7 +30,7 @@
           </div>
         </div>
 
-        <div class="thumb row1" id="cow" data-color="#E88648">
+        <div class="thumb" id="cow" data-color="#E88648">
           <div class="scrim">
             <div class="textbox">
               <h3>3.9 hours</h3>
@@ -39,7 +39,7 @@
           </div>
         </div>
 
-        <div class="thumb row1" id="human" data-color="#D17941">
+        <div class="thumb" id="human" data-color="#D17941">
           <div class="scrim">
               <div class="textbox">
                 <h3>6 hours</h3>
@@ -49,8 +49,8 @@
         </div>
       </div>
 
-      <div class="row2">
-        <div class="thumb row2" id="chipanzee" data-color="#BA6B3A">
+      <div class="row">
+        <div class="thumb" id="chipanzee" data-color="#BA6B3A">
           <div class="scrim">
             <div class="textbox">
               <h3>9.5 hours</h3>
@@ -59,7 +59,7 @@
           </div>
         </div>
 
-        <div class="thumb row2" id="rabbit" data-color="#A35E33">
+        <div class="thumb" id="rabbit" data-color="#A35E33">
           <div class="scrim">
             <div class="textbox">
               <h3>11.4 hours</h3>
@@ -68,7 +68,7 @@
         </div>
         </div>
 
-        <div class="thumb row2" id="dog" data-color="#8C512C">
+        <div class="thumb" id="dog" data-color="#8C512C">
           <div class="scrim">
             <div class="textbox">
               <h3>12 hours</h3>
@@ -78,8 +78,8 @@
         </div>
       </div>
 
-      <div class="row3">
-        <div class="thumb row3" id="cat" data-color="#744324">
+      <div class="row">
+        <div class="thumb" id="cat" data-color="#744324">
           <div class = "scrim">
             <div class="textbox">
               <h3>13 hours</h3>
@@ -88,7 +88,7 @@
           </div>
         </div>
 
-        <div class="thumb row3" id="tiger" data-color="#5D361D">
+        <div class="thumb" id="tiger" data-color="#5D361D">
           <div class = "scrim">
             <div class="textbox">
               <h3>15.8 hours</h3>
@@ -97,7 +97,7 @@
           </div>
         </div>
 
-        <div class="thumb row3" id="koala" data-color="#462916">
+        <div class="thumb" id="koala" data-color="#462916">
           <div class="scrim">
             <div class="textbox">
               <h3>20 hours</h3>
