--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <div id="wrapper">
 
-      <div class="row">
+      <div class="row1">
         <div class="thumb" id="giraffe" data-color="#FF934F">
           <div class="scrim">
             <div class="textbox">
@@ -49,7 +49,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row2">
         <div class="thumb" id="chipanzee" data-color="#BA6B3A">
           <div class="scrim">
             <div class="textbox">
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row3">
         <div class="thumb" id="cat" data-color="#744324">
           <div class = "scrim">
             <div class="textbox">
