--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css" media="screen" title="no title">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" media="screen" title="no title">
     <title>Sleeping Animals</title>
   </head>
   <body>
 
-    <div class="control" id="close">
-      <img src="images/close.png" alt="" />
+    <div class="control fa-5x" id="close">
+      <!-- <img src="images/close.png" alt="" /> -->
+      <i class="fa fa-times" aria-hidden="true"></i>
     </div>
-    <div class="control" id="right">
-      <img src="images/arrow_right.png" alt="" />
+    <div class="control fa-5x" id="right">
+      <!-- <img src="images/arrow_right.png" alt="" /> -->
+      <i class="fa fa-angle-right" aria-hidden="true"></i>
     </div>
-    <div class="control" id="left">
-      <img src="images/arrow_left.png" alt="" />
+    <div class="control fa-5x" id="left">
+      <!-- <img src="images/arrow_left.png" alt="" /> -->
+      <i class="fa fa-angle-left" aria-hidden="true"></i>
     </div>
 
     <div id="wrapper">
