--- a/index.html
+++ b/index.html
@@ -10,22 +10,19 @@
   <body>
 
     <div class="control fa-5x" id="close">
-      <!-- <img src="images/close.png" alt="" /> -->
       <i class="fa fa-times" aria-hidden="true"></i>
     </div>
     <div class="control fa-5x" id="right">
-      <!-- <img src="images/arrow_right.png" alt="" /> -->
       <i class="fa fa-angle-right" aria-hidden="true"></i>
     </div>
     <div class="control fa-5x" id="left">
-      <!-- <img src="images/arrow_left.png" alt="" /> -->
       <i class="fa fa-angle-left" aria-hidden="true"></i>
     </div>
 
     <div id="wrapper">
 
       <div class="row1">
-        <div class="thumb" id="giraffe" data-color="#FF934F">
+        <div class="thumb" id="giraffe" data-color="#c6ffe3">
           <div class="scrim">
             <div class="textbox">
               <h3>2 hours</h3>
@@ -34,7 +31,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="cow" data-color="#E88648">
+        <div class="thumb" id="cow" data-color="#c6e2ff">
           <div class="scrim">
             <div class="textbox">
               <h3>3.9 hours</h3>
@@ -43,7 +40,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="human" data-color="#D17941">
+        <div class="thumb" id="human" data-color="#fda5c0">
           <div class="scrim">
               <div class="textbox">
                 <h3>6 hours</h3>
@@ -54,7 +51,7 @@
       </div>
 
       <div class="row2">
-        <div class="thumb" id="chipanzee" data-color="#BA6B3A">
+        <div class="thumb" id="chipanzee" data-color="#fad3ac">
           <div class="scrim">
             <div class="textbox">
               <h3>9.5 hours</h3>
@@ -63,7 +60,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="rabbit" data-color="#A35E33">
+        <div class="thumb" id="rabbit" data-color="#d9ebff">
           <div class="scrim">
             <div class="textbox">
               <h3>11.4 hours</h3>
@@ -72,7 +69,7 @@
         </div>
         </div>
 
-        <div class="thumb" id="dog" data-color="#8C512C">
+        <div class="thumb" id="dog" data-color="#ece9f8">
           <div class="scrim">
             <div class="textbox">
               <h3>12 hours</h3>
@@ -83,7 +80,7 @@
       </div>
 
       <div class="row3">
-        <div class="thumb" id="cat" data-color="#744324">
+        <div class="thumb" id="cat" data-color="#ffc3a0">
           <div class = "scrim">
             <div class="textbox">
               <h3>13 hours</h3>
@@ -101,7 +98,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="koala" data-color="#462916">
+        <div class="thumb" id="koala" data-color="#a3bb67">
           <div class="scrim">
             <div class="textbox">
               <h3>20 hours</h3>
@@ -122,36 +119,3 @@
 
   </body>
 </html>
-
-    <!-- <link href="css/progressbar.css" rel="stylesheet" media="screen" title="no title">
-    <script src="js/progressbar.js" charset="utf-8"></script>
-    <script type="text/javascript">
-
-        var bar1 = new CircleProgressBar(document.querySelector('#giraffe'));
-        bar1.setProgressOfTotal(2, 24);
-
-        var bar2 = new CircleProgressBar(document.querySelector('#cow'));
-        bar2.setProgressOfTotal(4, 24);
-
-        var bar3 = new CircleProgressBar(document.querySelector('#human'));
-        bar3.setProgressOfTotal(6, 24);
-
-        var bar4 = new CircleProgressBar(document.querySelector('#chipanzee'));
-        bar4.setProgressOfTotal(9, 24);
-
-        var bar5 = new CircleProgressBar(document.querySelector('#rabbit'));
-        bar5.setProgressOfTotal(11, 24);
-
-        var bar6 = new CircleProgressBar(document.querySelector('#dog'));
-        bar6.setProgressOfTotal(12, 24);
-
-        var bar7 = new CircleProgressBar(document.querySelector('#cat'));
-        bar7.setProgressOfTotal(13, 24);
-
-        var bar8 = new CircleProgressBar(document.querySelector('#tiger'));
-        bar8.setProgressOfTotal(15, 24);
-
-        var bar9 = new CircleProgressBar(document.querySelector('#koala'));
-        bar9.setProgressOfTotal(20, 24);
-
-    </script>
