--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="cow" data-color="#c6e2ff">
+        <div class="thumb" id="cow" data-color="#f7c331">
           <div class="scrim">
             <div class="textbox">
               <h3>3.9 hours</h3>
@@ -60,7 +60,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="rabbit" data-color="#d9ebff">
+        <div class="thumb" id="rabbit" data-color="#c6e2ff">
           <div class="scrim">
             <div class="textbox">
               <h3>11.4 hours</h3>
@@ -89,7 +89,7 @@
           </div>
         </div>
 
-        <div class="thumb" id="tiger" data-color="#5D361D">
+        <div class="thumb" id="tiger" data-color="#f19f4d">
           <div class = "scrim">
             <div class="textbox">
               <h3>15.8 hours</h3>
@@ -114,7 +114,6 @@
       <p>By Lucila Vilela</p>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script type="text/javascript" src='js/main.js'></script>
 
   </body>
