--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
     </div>
 
     <footer>
-      <h2>Sleeping Animals</h3>
+      <h2>Sleeping Animals: How Much do Animals Sleep?</h3>
       <p>By Lucila Vilela</p>
     </footer>
 
